--- a/webform_senhaunica.info.yml
+++ b/webform_senhaunica.info.yml
@@ -1,5 +1,5 @@
-name: 'webform_senhaunica'
+name: 'Webform Senha Única'
 type: module
-description: 'Webform Senha única'
+description: 'Webform Senha Única'
 core_version_requirement: ^10.3 || ^11.0
 package: 'Universidade de São Paulo'
